frontend/src/styles/base.css
@import "tailwindcss";

* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family:
            Inter,
            system-ui,
            -apple-system,
            sans-serif;

    background: var(--color-background);
    color: var(--color-text);
}

html,
body,
#app {
    width: 100%;
    max-width: 100%;
    overflow-x: hidden;
}

button {
    font-family: inherit;
}

.Toastify__toast-container--top-right {
	right:1em;
	top:4em
}

